--- a/index.html
+++ b/index.html
@@ -24,247 +24,196 @@
   <!-- Add your site or application content here -->
 
   <body>
-		<!-- Start-wrap -->
+    <!-- Start-wrap -->
 
-			<!-- Start-Header-->
+    <!-- Start-Header-->
 
-			<div class="header">
-				<div class="wrap">
-				<!-- Start-logo-->
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logo" /></a>
-				</div>
+    <div class="header">
+      <div class="wrap">
+        <!-- Start-logo-->
+        <div class="logo">
+          <a href="index.html"><img src="images/logo.png" title="logo" /></a>
+        </div>
 
-				<!-- End-Logo-->
-				<!-- Start-Header-nav-->
+        <!-- End-Logo-->
+        <!-- Start-Header-nav-->
 
-				<div class="clear"> </div>
+        <div class="clear"> </div>
 
-				<!-- End-Header-nav-->
-			</div>
-			</div>
-			<div class="header-nav1">
-				<div class="wrap">
-					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="#">Advertice</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
+        <!-- End-Header-nav-->
+      </div>
+    </div>
+    <div class="header-nav1">
+      <div class="wrap">
+        <ul>
+          <li class="current"><a href="index.html">Blog</a></li>
+          <li><a href="#">IgoTech</a></li>
+          <li><a href="#">Articles</a></li>
+          <li><a href="#">Archives</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
 
-				<div class="search-bar">
-					<ul>
-						<li><input type="text"></li>
-						<li><input type="submit" value="" /></li>
-					</ul>
-				</div>
-				</div>
+        <div class="search-bar">
+          <ul>
+            <li><input type="text"></li>
+            <li><input type="submit" value=""/></li>
+          </ul>
+        </div>
+      </div>
 
-			<!-- End-Header-->
-			<div class="clear"> </div>
-			<!-- content-gallery-->
-			</div>
-			<div class="wrap">
-				<div class="about">
-					<div class="services-sidebar">
-					<h4>Categories</h4>
-					<ul>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Lorem ipsum dolor sit amet</a></li>
-					</ul><br>
-					<h4>Archives</h4>
-					<ul>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Jan, 2012</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">Feb, 2012</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">March, 2012</a></li>
-						<li><img src="images/pointer.png" title="pointer" /><a href="#">April, 2012</a></li>
-					</ul>
-				</div>
-					<div class="bloder-content">
+      <!-- End-Header-->
+      <div class="clear"> </div>
+      <!-- content-gallery-->
+    </div>
+    <div class="wrap">
+      <div class="about">
+        <div class="services-sidebar">
+          <h4>Catégories</h4>
+          <ul>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Catégorie 1</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Catégorie 2</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Catégorie 3</a></li>
+          </ul><br>
+          <h4>Archives</h4>
+          <ul>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Jan, 2017</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Fev, 2017</a></li>
+            <li><img src="images/pointer.png" title="pointer" /><a href="#">Mars, 2017</a></li>
+          </ul>
+        </div>
+        <div class="bloder-content">
 
-					<div class="bloger-grid">
+          <div class="bloger-grid">
 
-						<div class="blog-img">
-							<img src="images/img11.jpg" title="img6" />
-						</div>
-						<div class="bloger-content">
-							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<ul>
-								<li><a href="#">Lorem ipsum</a></li>
-								<li><a href="#">: 23-02-1989</a></li>
-								<li><a href="single.html"><span>Readmore</span></a></li>
-							</ul>
-						</div>
-						<div class="clear"> </div>
-					</div>
+            <div class="blog-img">
+              <img src="images/img11.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Article n°1</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Publié</a></li>
+                <li><a href="#">: 20-01-2017</a></li>
+                <li><a href="single.html"><span>Voir plus ?</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
 
-					<div class="clear"> </div>
-					<div class="bloger-grid">
-						<div class="blog-img">
-							<img src="images/img20.jpg" title="img6" />
-						</div>
-						<div class="bloger-content">
-							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<ul>
-								<li><a href="#">Lorem ipsum</a></li>
-								<li><a href="#">: 23-02-1989</a></li>
-								<li><a href="single.html"><span>Readmore</span></a></li>
-							</ul>
-						</div>
-						<div class="clear"> </div>
-					</div>
-					<div class="bloger-grid">
-						<div class="blog-img">
-							<img src="images/img2.jpg" title="img6" />
-						</div>
-						<div class="bloger-content">
-							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<ul>
-								<li><a href="#">Lorem ipsum</a></li>
-								<li><a href="#">: 23-02-1989</a></li>
-								<li><a href="single.html"><span>Readmore</span></a></li>
-							</ul>
-						</div>
+          <div class="clear"> </div>
+          <div class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img20.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Article n°2</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Publié</a></li>
+                <li><a href="#">: 03-02-2017</a></li>
+                <li><a href="single.html"><span>Voir plus ?</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
+          <div class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img2.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Article n°3</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Publié</a></li>
+                <li><a href="#">: 14-03-2017</a></li>
+                <li><a href="single.html"><span>Voir plus ?</span></a></li>
+              </ul>
+            </div>
 
-					</div>
-					<div style="border-bottom:none;" class="bloger-grid">
-						<div class="blog-img">
-							<img src="images/img15.jpg" title="img6" />
-						</div>
-						<div class="bloger-content">
-							<h5><a href="single.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<ul>
-								<li><a href="#">Lorem ipsum</a></li>
-								<li><a href="#">: 23-02-1989</a></li>
-								<li><a href="single.html"><span>Readmore</span></a></li>
-							</ul>
-						</div>
-						<div class="clear"> </div>
-					</div>
-					</div>
+          </div>
+          <div style="border-bottom:none;" class="bloger-grid">
+            <div class="blog-img">
+              <img src="images/img15.jpg" title="img6" />
+            </div>
+            <div class="bloger-content">
+              <h5><a href="single.html">Article n°4</a></h5>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+              <ul>
+                <li><a href="#">Publié</a></li>
+                <li><a href="#">: 23-03-2017</a></li>
+                <li><a href="single.html"><span>Voir plus ?</span></a></li>
+              </ul>
+            </div>
+            <div class="clear"> </div>
+          </div>
+        </div>
 
-					<div class="clear"> </div>
+        <div class="clear"> </div>
 
-			</div>
-			</div>
+      </div>
+    </div>
 
-<div class="clear"> </div>
-			<!-- End-content-gallery-->
-			<!-- DC Pagination:C9 Start -->
-			<div class="wrap">
-	<!-- DC Pagination:A3 Start -->
-						<ul class="dc_pagination dc_paginationA dc_paginationA03">
-						  <li><a href="#" class="first">First</a></li>
-						  <li><a href="#" class="previous">Previous</a></li>
-						  <li><a href="#">1</a></li>
-						  <li><a href="#">2</a></li>
-						  <li><a href="#" class="current">3</a></li>
-						  <li><a href="#">4</a></li>
-						  <li><a href="#">5</a></li>
-						  <li><a href="#" class="next">Next</a></li>
-						  <li><a href="#" class="last">Last</a></li>
+    <div class="clear"> </div>
+    <!-- End-content-gallery-->
+    <!-- DC Pagination:C9 Start -->
+    <div class="wrap">
+      <!-- DC Pagination:A3 Start -->
+      <ul class="dc_pagination dc_paginationA dc_paginationA03">
+        <li><a href="#" class="first">Premier</a></li>
+        <li><a href="#" class="previous">Précédent</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#" class="current">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#" class="next">Suivant</a></li>
+        <li><a href="#" class="last">Dernière</a></li>
 
-						</ul>
-							<!-- DC Pagination:A3 End -->
+      </ul>
+      <!-- DC Pagination:A3 End -->
 
-	    		<div class="clear"> </div>
+      <div class="clear"> </div>
 
-	<!-- DC Pagination:C9 End -->
+      <!-- DC Pagination:C9 End -->
 
-		</div>
-	<div class="clear"> </div>
-		<div class="footer">
-				<div class="wrap">
-				<h3>SAY HELLO</h3>
-				<p>Lorem ipsum dolor sit amet, consect etur adipiscing elit. Vestibulum ut tortor urnati dunt
+    </div>
+    <div class="clear"> </div>
+    <div class="footer">
+      <div class="wrap">
+        <h3>1er blog et forum dédié Nouvelles Technologies !</h3>
+        <p>IgoTech est un blog dédié Nouvelles Technologies qui a pour objectif d’informer sur les tendances en matière de technologie.</p>
 
-						dolor. Nunc vulputate ultrices con sect etur donec semper lacinia ultri dolore cie
-
-						lorem ipsum commete.</p>
-
-			<div class="footerlinks">
-				<div class="share">
-		                	<li><a href="#" target="_blank" title="Facebook"><span class="social fbook"> </span></a></li>
-		                	<li><a href="#" target="_blank" title="twitter"><span class="social twitter"> </span></a></li>
-		                    <li><a href="#" target="_blank" title="tumblr"><span class="social tumblr"> </span></a></li><br />
-		                    <li><a href="#" target="_blank" title="delicious"><span class="social delicious"> </span></a></li>
-		                	<li><a href="#" target="_blank" title="delicious"><span class="social delicious"> </span></a></li>
-		                	<li><a href="#" target="_blank" title="dribbble"><span class="social dribbble"> </span></a></li>
-		                    <li><a href="#" target="_blank" title="evernote"><span class="social evernote"> </span></a></li>
-		                    <li><a href="#" target="_blank" title="stumbleupon"><span class="social stumbleupon"> </span></a></li>
-
-		                </div>
+          <div class="footerlinks">
+            <div class="share">
+              <li><a href="#" target="_blank" title="Facebook"><span class="social fbook"> </span></a></li>
+              <li><a href="#" target="_blank" title="Twitter"><span class="social twitter"> </span></a></li>
+              <li><a href="#" target="_blank" title="Tumblr"><span class="social tumblr"> </span></a></li><br/>
+            </div>
 
 
-			</div>
-			</div>
-			</div>
-			<div class="footer1">
-	<p class="link"><span>© All rights Reserved | Designed by&nbsp; <a href="http://w3layouts.com/"> W3Layouts</a>	</span></p>
-</div>
-		<!-- End-wrap -->
+          </div>
+        </div>
+      </div>
+      <div class="footer1">
+        <p class="link"><span>© Tout droits réservés / Crée par&nbsp; <a href="http://CreasyCarlito.com/"> @CreasyCarlito</a>	</span></p>
+      </div>
+      <!-- End-wrap -->
 
-	</body>
+    </body>
 
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-          e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-          e.src='https://www.google-analytics.com/analytics.js';
-          r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-          ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-          </script>
-        </body>
-        </html>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      </script>
+    </body>
+    </html>
