--- a/article.html
+++ b/article.html
@@ -103,93 +103,97 @@
           <div id="mychrono"></div>
 
         </div>
-					<div class="bloder-content">
+        <div class="bloder-content">
 
-					<div class="blog-box1">
-						<div class="blog-box-image">
-							<img src="images/pre.png" title="priview" />
-						</div>
-						<div class="blog-box-content">
-							<h5><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</a></h5>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-							<ul>
-								<li><a href="#">Lorem ipsum</a></li>
-								<li><a href="#">: 23-02-1989</a></li>
-								<li><a href="#"><span>Readmore</span></a></li>
-							</ul>
-						</div>
-					</div>
+          <div class="blog-box1">
+            <div class="blog-box-image">
+              <img src="http://img.phonandroid.com/2015/10/operateurs.jpg" title="article" />
+            </div>
+            <div class="blog-box-content">
+              <h5>Les opérateurs mobiles viennent de dépasser les 5 milliards d’abonnés</h5>
+              <p>Les deux tiers de la population mondiale sont maintenant connectés. C’est ce qu’annonçait la semaine dernière la GSMA Intelligence, la branche spécialisée dans les recherches de la GSM Association qui représente les opérateurs mobiles à travers le monde.</p>
+              <p>Celle-ci suit en temps réel le nombre d’abonnés des opérateurs et selon ses données, ce nombre vient de dépasser les 5 milliards. Comme le rappelle Mats Granryd, le directeur général de la GSMA, cette étape franchie « reflète les milliards de dollars investis par les opérateurs mobiles dans les réseaux, les services et pour les spectres pendant plusieurs années ».
 
-					<div class="clear"> </div>
-				</div>
+                Les trois quarts atteints en 2020
 
+                Selon les prévisions de la GSMA Intelligence, le nombre de personnes connectées aux mobiles dans le monde devrait dépasser les 5,7 milliards en 2020. A ce moment-là, explique l’organisation, près de trois personnes sur quatre seront connectées aux réseaux mobiles. Et 30 % des nouveaux abonnés seront indiens.
 
-			</div>
-			</div>
+                « Les opportunités de croissance sur les prochaines années seront axées sur les populations rurales à faibles revenus ; Les opérateurs développent une gamme de solutions durables pour offrir une connectivité abordable aux communautés mal desservies », indique le directeur général de la GSMA.
 
-<div class="clear"> </div>
-			<!-- End-content-gallery-->
-      <!-- DC Pagination:C9 Start -->
-      <div class="wrap">
-        <!-- DC Pagination:A3 Start -->
-        <ul class="dc_pagination dc_paginationA dc_paginationA03">
-          <li><a href="#" class="first">Premier</a></li>
-          <li><a href="#" class="previous">Précédent</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#" class="current">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#" class="next">Suivant</a></li>
-          <li><a href="#" class="last">Dernière</a></li>
+                D’ailleurs, aujourd’hui, plus de la moitié des utilisateurs de services mobiles est localisée dans la région Asie-Pacifique. Et les deux plus grands marchés sont la Chine (plus d’un milliard d’utilisateurs) et l’Inde (730 millions d’utilisateurs).
 
-        </ul>
-        <!-- DC Pagination:A3 End -->
+              </p>
 
-        <div class="clear"> </div>
+            </div>
+          </div>
 
-        <!-- DC Pagination:C9 End -->
+          <div class="clear"> </div>
+        </div>
+
 
       </div>
+    </div>
+
+    <div class="clear"> </div>
+    <!-- End-content-gallery-->
+    <!-- DC Pagination:C9 Start -->
+    <div class="wrap">
+      <!-- DC Pagination:A3 Start -->
+      <ul class="dc_pagination dc_paginationA dc_paginationA03">
+        <li><a href="#" class="first">Premier</a></li>
+        <li><a href="#" class="previous">Précédent</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#" class="current">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#" class="next">Suivant</a></li>
+        <li><a href="#" class="last">Dernière</a></li>
+
+      </ul>
+      <!-- DC Pagination:A3 End -->
+
       <div class="clear"> </div>
-      <div class="footer">
-        <div class="wrap">
-          <h3>1er blog et forum dédié Nouvelles Technologies !</h3>
-          <p>IgoTech est un blog dédié Nouvelles Technologies qui a pour objectif d’informer sur les tendances en matière de technologie.</p>
 
-          <div class="footerlinks">
-            <div class="share">
-              <li><a href="#" target="_blank" title="Facebook"><span class="social fbook"> </span></a></li>
-              <li><a href="#" target="_blank" title="Twitter"><span class="social twitter"> </span></a></li>
-              <li><a href="#" target="_blank" title="Tumblr"><span class="social tumblr"> </span></a></li><br/>
-            </div>
+      <!-- DC Pagination:C9 End -->
 
+    </div>
+    <div class="clear"> </div>
+    <div class="footer">
+      <div class="wrap">
+        <h3>1er blog et forum dédié Nouvelles Technologies !</h3>
+        <p>IgoTech est un blog dédié Nouvelles Technologies qui a pour objectif d’informer sur les tendances en matière de technologie.</p>
 
+        <div class="footerlinks">
+          <div class="share">
+            <li><a href="#" target="_blank" title="Facebook"><span class="social fbook"> </span></a></li>
+            <li><a href="#" target="_blank" title="Twitter"><span class="social twitter"> </span></a></li>
+            <li><a href="#" target="_blank" title="Tumblr"><span class="social tumblr"> </span></a></li><br/>
           </div>
+
+
         </div>
       </div>
-      <div class="footer1">
-        <p class="link"><span>© Tout droits réservés / Crée par&nbsp; <a href="http://CreasyCarlito.com/"> @CreasyCarlito</a>	</span></p>
-      </div>
-      <!-- End-wrap -->
+    </div>
+    <div class="footer1">
+      <p class="link"><span>© Tout droits réservés / Crée par&nbsp; <a href="http://CreasyCarlito.com/"> @CreasyCarlito</a>	</span></p>
+    </div>
+    <!-- End-wrap -->
 
-    </body>
+  </body>
 
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-      </script>
-    </body>
-    </html>
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='https://www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
+  </html>
